--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,9 @@ a:hover {
 #bloc-1-hero h1 {
     font-size: 32px;
 }
+#bloc-1-hero img {
+   width: 100px;
+}
 
 .navbar {
     margin-bottom: 0;
@@ -305,6 +308,7 @@ a:hover {
     max-height: 200px;
     margin: 0 5px 0 0;
     display: inline;
+    height: 40px;
 }
 
 .navbar-brand img[src$=svg] {
