--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,9 @@ a:hover {
     text-decoration: none;
     cursor: pointer;
 }
-
+img{
+    width: 100%;
+}
 #page-loading-blocs-notifaction {
     position: fixed;
     top: 0;
@@ -25,6 +27,10 @@ a:hover {
     width: 100%;
     z-index: 100000;
     background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
+}
+.m-auto{
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .bloc {
@@ -663,11 +669,11 @@ a {
 }
 
 .hero-bloc-text {
-    font-size: 38px;
+    font-size: 70px;
 }
 
 .hero-bloc-text-sub {
-    font-size: 36px;
+    font-size: 18px;
 }
 
 .statement-bloc-text {
@@ -681,12 +687,7 @@ a {
 }
 
 p {
-    font-size: 11px;
-}
-
-.tight-width-whitespace {
-    max-width: 600px;
-    margin: auto auto auto auto;
+    font-size: 18px;
 }
 
 .h1 {
@@ -779,7 +780,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: white!important;
 }
 
 .btn-atomic-tangerine {
@@ -827,6 +828,21 @@ h4 {
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
+}
+
+.real-title{
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.citation{
+    font-size: 22px;
+    font-weight: 400;
+    font-style: italic;
+}
+.citation-auteur{
+    font-size: 22px;
+    font-weight: 200;
 }
 
 @media (max-width: 1024px) {
